Fix whitespace under nav items.

--- a/nkdsu/static/less/main.less
+++ b/nkdsu/static/less/main.less
@@ -58,9 +58,10 @@ body {
 
         a {
           overflow: hidden;
-          padding: 1em .8em;
+          padding: .4em .8em 1em;
+
           @media (max-width: @breakpoint) {
-            padding: .4em .6em;
+            padding: .4em .6em 1em;
           }
 
          &:hover {
